# PPanGGOLiN

./: .condarc.yml  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  VERSION  find_best_grr_cutoff.py  ppanggolin_env.yaml  pyproject.toml  requirements.txt  requirements_pip.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black_lint.yml  check_doc.yml  check_recipes.yml  main.yml  pypi.yml
PPanGGOLiN.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: README.txt  conf.py  index.md  requirements.txt
docs/api/: indice_and_table.md  modules.md  ppanggolin.RGP.md  ppanggolin.align.md  ppanggolin.annotate.md  ppanggolin.cluster.md  ppanggolin.context.md  ppanggolin.figures.md  ppanggolin.formats.md  ppanggolin.graph.md  ppanggolin.info.md  ppanggolin.md  ppanggolin.meta.md  ppanggolin.metrics.md  ppanggolin.mod.md  ppanggolin.nem.md  ppanggolin.projection.md  ppanggolin.utility.md  ppanggolin.workflow.md
docs/dev/: buildDoc.md  contribute.md  devRules.md  git.md  unitTest.md  workflows.md
docs/source/: conf.py  index.md  modules.rst  ppanggolin.RGP.rst  ppanggolin.align.rst  ppanggolin.annotate.rst  ppanggolin.cluster.rst  ppanggolin.figures.rst  ppanggolin.formats.rst  ppanggolin.graph.rst  ppanggolin.info.rst  ppanggolin.nem.rst  ppanggolin.rst  ppanggolin.workflow.rst
docs/tutorial/: AnalyseRGP.md  Basic-usage-and-practical-information.md  inputData.md  prepEnv.md  workflows.md
docs/user/: Align.md  Basic-usage-and-practical-information.md  Conserved-modules.md  Genomic-context.md  Home.md  Installation.md  Introduction.md  MSA.md  Outputs.md  PPanGGOLiN---step-by-step-pangenome-analysis.md  Regions-of-Genome-Plasticity.md  _Sidebar.md  align.md  citation.md  genomicContext.md  install.md  introduction.md  issues.md  metadata.md  practicalInformation.md  projection.md  step-by-step-pangenome-analysis.md  writeFasta.md  writeGenomes.md
ppanggolin/: __init__.py  command_line.py  edge.py  geneFamily.py  genetic_codes.py  genome.py  intergenomic.py  main.py  metadata.py  pangenome.py  ppanggolin.py  region.py  utils.py
ppanggolin/NEM/: err2.c  exemain.c  exememo.c  genmemo.c  geo2nei.c  lib_io.h  mainfunc.h  makefile  nem.pyx  nem_alg.c  nem_alg.h  nem_arg.c  nem_arg.h  nem_exe.c  nem_exe.h  nem_mod.c  nem_rnd2.h  nem_typ.h  nem_user.txt  nem_ver.h  randord.c  tcpu.c  txt2hlp.c
ppanggolin/RGP/: __init__.py  draw_spot.py  genomicIsland.py  hotspot.py  panRGP.py  rgp_cluster.py  spot.py
ppanggolin/align/: __init__.py  alignOnPang.py
ppanggolin/annotate/: __init__.py  annotate.py  gen_codes.py  readExternal.py  synta.py
ppanggolin/cluster/: __init__.py  cluster.py
ppanggolin/context/: __init__.py  searchCC.py  searchGeneContext.py
ppanggolin/create/: __init__.py  baseCreate.py  makeNeighborsGraph.py
ppanggolin/evolution/: __init__.py  evolution.py
ppanggolin/figures/: __init__.py  draw_spot.py  drawing.py  tile_plot.py  ucurve.py
ppanggolin/formats/: __init__.py  h5reader.py  proksee_template.json  readBinaries.py  writeAnnotations.py  writeBinaries.py  writeFASTA.py  writeFlat.py  writeFlatGenomes.py  writeFlatMetadata.py  writeFlatPangenome.py  writeMSA.py  writeMetadata.py  writeSequences.py  write_proksee.py
ppanggolin/graph/: __init__.py  makeGraph.py
ppanggolin/info/: __init__.py  info.py
ppanggolin/meta/: meta.py  metafamilies.py
ppanggolin/metrics/: fluidity.py  metrics.py
ppanggolin/mod/: __init__.py  module.py
ppanggolin/nem/: evolution.py  partition.py  rarefaction.py
ppanggolin/partition/: __init__.py  basePartition.py  init_nem.py  partition.py
ppanggolin/projection/: __init__.py  projection.py
ppanggolin/utility/: __init__.py  default_config.py  utility.py  utils.py
ppanggolin/workflow/: all.py  panModule.py  panRGP.py  workflow.py
testingDataset/: NC_010287.gbff  clusters.tsv  compare_results.py  genomes.fasta.list  genomes.gbff.list  launch_test_locally.py  metadata_genes.tsv  organisms.fasta.list  organisms.gbff.list  some_chlam_families.txt  some_chlam_proteins.fasta
testingDataset/GBFF/: GCF_003788785.1_ct114V1_genomic_prodigal_annotation.gff
testingDataset/expected_info_files/: checksum.txt  clusters_mybasicpangenome.sha256  expected_hashes.json  myannopang_info.yaml  mybasicpangenome_info.yaml  panrgp_from_existing_cluster_info.yaml  stepbystep_info.yaml
testingDataset/metadata/: metadata_contigs.tsv  metadata_families.tsv  metadata_genes.tsv  metadata_genomes.tsv  metadata_modules.tsv  metadata_rgps.tsv
testing_dataset_C_trachomatis/: orgs.list
testing_dataset_C_trachomatis/gff_files/: 2923%GCF_000174055.1_ASM17405v1_genomic.gff  434Bu%GCF_002192565.1_ASM219256v1_genomic.gff  434Bu%GCF_002192615.1_ASM219261v1_genomic.gff  434Bu%GCF_002192635.1_ASM219263v1_genomic.gff  434_Bu%GCF_000068585.1_ASM6858v1_genomic.gff  6276%GCF_000173475.1_ASM17347v1_genomic.gff  6276s%GCF_000173495.1_ASM17349v1_genomic.gff  70%GCF_000173515.1_ASM17351v1_genomic.gff  70s%GCF_000173535.1_ASM17353v1_genomic.gff  A2497%GCF_000226605.1_ASM22660v1_genomic.gff  A2497%GCF_000284475.1_ASM28447v1_genomic.gff  A_363%GCF_000318525.1_ASM31852v2_genomic.gff  A_5291%GCF_000318545.1_ASM31854v1_genomic.gff  A_7249%GCF_000318565.1_ASM31856v1_genomic.gff  A_HAR-13%GCF_000012125.1_ASM1212v1_genomic.gff  B_TZ1A828_OT%GCF_000026905.1_ASM2690v1_genomic.gff  C_TW-3%GCF_000507225.1_ASM50722v1_genomic.gff  D-EC%GCF_000092485.1_ASM9248v1_genomic.gff  D-LC%GCF_000093005.1_ASM9300v1_genomic.gff  D_13-96%GCF_000590675.1_ASM59067v1_genomic.gff  D_14-96%GCF_000590695.1_ASM59069v1_genomic.gff  D_CS637_11%GCF_001183765.1_ASM118376v1_genomic.gff  D_SotonD1%GCF_000318585.1_ASM31858v1_genomic.gff  D_SotonD5%GCF_000318605.1_ASM31860v1_genomic.gff  E_150%GCF_000092665.1_ASM9266v1_genomic.gff  (+119 more)
tests/: conftest.py  pytest.ini  test_Edge.py  test_GeneFamily.py  test_Pangenome.py  test_Region.py  test_edge.py  test_genefamily.py  test_genome.py  test_metadata.py  test_pangenome.py  test_region.py  tests_Edge.py  tests_GeneFamily.py  tests_Genome.py  tests_Pangenome.py  tests_Region.py  tests_genome.py
(+141 files in other folders)
