[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "cython",
    tqdm>=4.64,
    tables>=3.7,
    pyrodigal>=3.0.1,
    networkx>=3.0,
    scipy>=1.10.0,
    plotly>=4.14.3,
    gmpy2>=2.1.2,
    pandas>=2.0,
    colorlover>=0.3,
    numpy>=1.24,
    bokeh>=2.4.2,<3,
]
build-backend = "setuptools.build_meta"
py_modules=["ppanggolin"]

[project]
name = "PPanGGOLiN"
description = "Pangenome analysis suite"
dynamic = ["version"]
authors = [
    {name = "Guillaume Gautreau"},
    {name = "Adelme Bazin"},
    {name = "Jérôme Arnoux", email = "jarnoux@genoscope.cns.fr"},
    {name = "Jean Mainguy"},
]
maintainers = [
    {name = "Guillaume Gautreau"},
    {name = "Adelme Bazin"},
    {name = "Jérôme Arnoux", email = "jarnoux@genoscope.cns.fr"},
    {name = "Jean Mainguy"},
]
readme = "README.md"
keywords = ["Pangenomics", "Comparative genomics", "Bioinformatics", "Prokaryote"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"]
requires-python = ">=3.8"
license = {file="LICENCE.txt"}

[project.optional-dependencies]
doc = [
    "sphinx==6.2.1",
    "sphinx_rtd_theme==1.2.2",
    "readthedocs-sphinx-search==0.3.1",
    "sphinx-autobuild==2021.3.14",
    "myst-parser==2",
    "docutils==0.18.1",
    "sphinxcontrib.mermaid==0.9.2"
]
test = [
    "pytest>=7.0.0"
]
#
[project.urls]
Homepage = "https://labgem.genoscope.cns.fr/2023/04/27/ppanggolin/"
Repository = "https://github.com/labgem/PPanGGOLiN/"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
#Documentation = "https://readthedocs.org"
#
#
[project.scripts]
ppanggolin = "ppanggolin.main:main"

[tool.setuptools]
packages = ["ppanggolin"]

#[tool.setuptools.package-data]
#mypkg = ["*.txt", "*.rst"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
