[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "cython"
]
build-backend = "setuptools.build_meta"
py_modules=["ppanggolin"]

[project]
name = "PPanGGOLiN"
description = "Pangenome analysis suite"
dynamic = ["version"]
authors = [
    {name = "Guillaume Gautreau"},
    {name = "Adelme Bazin"},
    {name = "Jérôme Arnoux", email = "jarnoux@genoscope.cns.fr"},
    {name = "Jean Mainguy"},
]
maintainers = [
    {name = "Guillaume Gautreau"},
    {name = "Adelme Bazin"},
    {name = "Jérôme Arnoux", email = "jarnoux@genoscope.cns.fr"},
    {name = "Jean Mainguy"},
]
readme = "README.md"
keywords = ["Pangenomics", "Comparative genomics", "Bioinformatics", "Prokaryote"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"]
requires-python = ">=3.8"
license = {file="LICENSE.txt"}

[project.optional-dependencies]
doc = [
    "sphinx==6.2.1",
    "sphinx_rtd_theme==1.2.2",
    "readthedocs-sphinx-search==0.3.2",
    "sphinx-autobuild==2021.3.14",
    "myst-parser==2",
    "docutils==0.18.1",
    "sphinxcontrib.mermaid==0.9.2",
]
test = [
    "pytest==7"
]
python_deps = [
    "tqdm==4.*",
    "tables==3.*",
    "pyrodigal==3.*",
    "networkx==3.*",
    "scipy==1.*",
    "plotly==5.*",
    "gmpy2==2.*",
    "pandas==2.*",
    "colorlover==0.3",
    "numpy==1.24",
    "bokeh==3.*"
]
#
[project.urls]
Homepage = "https://labgem.genoscope.cns.fr/2023/04/27/ppanggolin/"
Repository = "https://github.com/labgem/PPanGGOLiN/"
Documentation = "https://ppanggolin.readthedocs.io"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
#
[project.scripts]
ppanggolin = "ppanggolin.main:main"

[tool.setuptools]
packages = ["ppanggolin"]

#[tool.setuptools.package-data]
#mypkg = ["*.txt", "*.rst"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
markers = [
    "nucleotides: marks tests to run with nucleotides alphabets",
    "aminoacids: marks tests to run with amino-acids alphabets",
]